# bazelcov

./: .gitignore  BUILD  MODULE.bazel  Makefile  go.mod  go.sum  main.go
.github/workflows/: test.yaml
dev/: BUILD
